--- a/ScientResearch/pom.xml
+++ b/ScientResearch/pom.xml
@@ -38,6 +38,13 @@
             <version>2.1.3</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.2.5</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
