--- a/ScientResearch/pom.xml
+++ b/ScientResearch/pom.xml
@@ -87,6 +87,11 @@
             <version>12.1.0.2.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+            <version>1.1.20</version>
+        </dependency>
 
         <dependency>
             <groupId>com.alibaba</groupId>
