--- a/ScientResearch/pom.xml
+++ b/ScientResearch/pom.xml
@@ -43,6 +43,11 @@
             <version>2.1.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+
 
         <dependency>
             <groupId>com.github.pagehelper</groupId>
