--- a/ScientResearch/pom.xml
+++ b/ScientResearch/pom.xml
@@ -103,6 +103,18 @@
             <artifactId>druid</artifactId>
             <version>1.1.18</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.9</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.9</version>
+        </dependency>
+
         <!--前端js h5-->
         <dependency>
             <groupId>org.webjars</groupId>
